// The syntax for this file is proto3
syntax = "proto3";

/* Person is used to identify users 
 * across our system */
message Person {
    // the age as of the person's creation
    int32 age = 1;
    string first_name = 2;
    string last_name = 3;
    bytes small_picture = 4;
    bool is_profile_verified  = 5;
    float height = 6;

    repeated string phone_numbers = 7;
}