syntax = "proto3";

package greet;
option go_package="sumpb";

message Sum {
    int64 a = 1;
    int64 b = 2;   
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int64 total = 1;
}

service SumService{
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
}